<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_notifications">
        <SwitchPreference
            android:defaultValue="false"
            android:key="allow_notifications"
            android:summary="@string/pref_allow_notifications_note"
            android:title="@string/pref_allow_notifications"/>

        <ListPreference
            android:defaultValue="5"
            android:dependency="allow_notifications"
            android:entries="@array/debtAge"
            android:entryValues="@array/debtAgeValues"
            android:key="debt_age"
            android:summary="@string/pref_debt_age_note"
            android:title="@string/pref_debt_age"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_other">
        <Preference android:key="backup" android:title="@string/title_backup" />
        <Preference android:key="export" android:title="@string/title_export" />
        <Preference android:key="about" android:title="@string/title_about" />
    </PreferenceCategory>

</PreferenceScreen>