<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:uome="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_filter"
        android:checkable="true"
        android:icon="@drawable/ic_action_filter_off"
        android:title="@string/menu_filter"
        uome:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_filter_all"
                    android:title="@string/menu_filter_all"/>
                <item
                    android:id="@+id/menu_filter_financial"
                    android:title="@string/menu_filter_financial"/>
                <item
                    android:id="@+id/menu_filter_non_financial"
                    android:title="@string/menu_filter_non_financial"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_add_transaction"
        android:icon="@drawable/ic_action_add_transaction"
        android:title="@string/menu_add_transaction"
        uome:showAsAction="always"/>

    <item
        android:id="@+id/menu_settle_debt"
        android:icon="@drawable/ic_action_settle_debt"
        android:title="@string/menu_settle_debt"
        uome:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_send_email_with_debt"
        android:icon="@drawable/ic_action_send_email"
        android:title="@string/menu_send_email_with_debt"
        uome:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_edit_person"
        android:title="@string/menu_edit_person"
        uome:showAsAction="never"/>

    <item
        android:id="@+id/menu_delete_person"
        android:title="@string/menu_delete_person"
        uome:showAsAction="never"/>

</menu>