<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:uome="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_filter"
        android:checkable="true"
        android:icon="@drawable/ic_action_filter_off"
        android:title="@string/menu_filter"
        uome:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_filter_all"
                    android:title="@string/menu_filter_all"/>
                <item
                    android:id="@+id/menu_filter_financial"
                    android:title="@string/menu_filter_financial"/>
                <item
                    android:id="@+id/menu_filter_non_financial"
                    android:title="@string/menu_filter_non_financial"/>
            </group>
        </menu>
    </item>

</menu>