<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/label_people"
                android:src="@drawable/ic_label_group"/>

            <!-- Persons -->

            <TextView
                android:id="@+id/personMultiPicker"
                style="@style/Picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:hint="@string/hint_select_people"/>

            <!-- Direction -->

            <RadioGroup
                android:id="@+id/typeRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/personMultiPicker"
                android:layout_marginLeft="48dp"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <RadioButton
                    android:id="@+id/withdrawalRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:checked="true"
                    android:text="@string/button_withdrawal"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <RadioButton
                    android:id="@+id/depositRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_deposit"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </RadioGroup>
        </RelativeLayout>

        <!-- Amount -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/label_amount"
                android:src="@drawable/ic_label_amount"/>

            <EditText
                android:id="@+id/amountEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:hint="@string/hint_total_amount"
                android:inputType="numberDecimal"/>
        </RelativeLayout>

        <!-- Description -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/hint_description"
                android:src="@drawable/ic_label_description"/>

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:hint="@string/hint_description"
                android:inputType="textCapSentences"/>
        </RelativeLayout>

        <!-- Date & time -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/label_datetime"
                android:src="@drawable/ic_label_datetime"/>

            <cz.kns.uome.common.view.DateTimePicker
                android:id="@+id/dateTimePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"/>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>