<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Person -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/label_person"
                android:src="@drawable/ic_label_person"/>

            <Spinner
                android:id="@+id/personSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:prompt="@string/hint_select_person"/>
        </RelativeLayout>

        <!-- Direction -->

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <RadioGroup
            android:id="@+id/directionRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/withdrawalRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:checked="true"
                android:text="@string/button_received"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <RadioButton
                android:id="@+id/depositRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_gave"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Amount / Item label -->

            <ImageView
                android:id="@+id/amountOrItemLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/label_amount"
                android:src="@drawable/ic_label_amount"/>

            <!-- Amount -->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/amountTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:hint="@string/hint_amount"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/amountEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_amount"
                    android:inputType="numberDecimal"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Item -->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/itemTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:hint="@string/hint_borrowed_item"
                android:visibility="invisible"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/itemEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_borrowed_item"
                    android:inputType="textCapSentences"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Is financial -->

            <CheckBox
                android:id="@+id/financialTransactionCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/amountTextLayout"
                android:layout_marginLeft="48dp"
                android:checked="true"
                android:text="@string/button_is_financial"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </RelativeLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <!-- Description -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/hint_description"
                android:src="@drawable/ic_label_description"/>

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:hint="@string/hint_description"
                android:inputType="textCapSentences"/>
        </RelativeLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <!-- Date & time -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/label_datetime"
                android:src="@drawable/ic_label_datetime"/>

            <cz.pikadorama.uome.common.view.DateTimePicker
                android:id="@+id/dateTimePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"/>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>